<resources>
    <string name="app_name">AnimeSearch</string>

    <string name="nav_search">Search</string>
    <string name="nav_bookmarks">Bookmarks</string>

    <string name="menu_mode">Night mode</string>
    <string name="menu_delete">Delete</string>

    <string name="text_navigate_to_bookmarks">Check bookmarks</string>
    <string name="text_upload_from_file">From file</string>
    <string name="text_upload_from_camera">From camera</string>
    <string name="text_search">Search anime</string>

    <string name="text_similarity">%d%%</string>
    <string name="text_range">[%s .. %s]</string>
    <string name="text_episode">EP%d</string>
    <string name="text_title">Title: %s</string>

    <string name="text_hint">Swipe left or right to remove</string>

    <string name="text_error_no_bookmarks">No bookmarks found</string>
    <string name="text_error_fetching">Error fetching data</string>
    <string name="text_error_loading">Error loading file</string>
    <string name="text_error_permission">You should give camera permission to use all features</string>

    <string name="text_accessibility_adult">Is adult?</string>
    <string name="text_accessibility_favorite">Is favorite?</string>
    <string name="text_accessibility_anilist">Navigate to Anilist</string>
    <string name="text_accessibility_preview">Image preview</string>
    <string name="text_accessibility_back">Return to Search screen</string>
    <string name="text_accessibility_mode">Change mode</string>
    <string name="text_accessibility_remove">Remove all bookmarks</string>
</resources>